Add nights_stayed column

--- a/1SA Final Project Hotel Bookings.ipynb
+++ b/1SA Final Project Hotel Bookings.ipynb
@@ -1252,7 +1252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 48,
    "outputs": [
     {
      "data": {
@@ -1412,7 +1412,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 54,
+   "outputs": [],
+   "source": [
+    "nights_stayed = df3[\"stays_in_week_nights\"] + df3[\"stays_in_weekend_nights\"]\n",
+    "df3[\"nights_stayed\"] = nights_stayed.astype(int)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "              hotel  is_canceled  lead_time  arrival_date_year  \\\n24840  Resort Hotel            0        156               2016   \n6904   Resort Hotel            0        292               2016   \n1873   Resort Hotel            0         61               2015   \n\n       arrival_date_month  arrival_date_week_number  \\\n24840                   5                        23   \n6904                    7                        29   \n1873                    9                        38   \n\n       arrival_date_day_of_month  stays_in_weekend_nights  \\\n24840                         30                        1   \n6904                          10                        1   \n1873                          19                        2   \n\n       stays_in_week_nights  adults  children  babies distribution_channel  \\\n24840                     5       2       0.0       0                TA/TO   \n6904                      0       2       0.0       0                TA/TO   \n1873                      2       2       0.0       0               Direct   \n\n       is_repeated_guest  previous_cancellations  deposit_type  \\\n24840                  0                       0           2.0   \n6904                   0                       0           2.0   \n1873                   0                       0           2.0   \n\n       days_in_waiting_list  number_of_guests  nights_stayed  \n24840                     0                 2              6  \n6904                      0                 2              1  \n1873                      0                 2              4  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>hotel</th>\n      <th>is_canceled</th>\n      <th>lead_time</th>\n      <th>arrival_date_year</th>\n      <th>arrival_date_month</th>\n      <th>arrival_date_week_number</th>\n      <th>arrival_date_day_of_month</th>\n      <th>stays_in_weekend_nights</th>\n      <th>stays_in_week_nights</th>\n      <th>adults</th>\n      <th>children</th>\n      <th>babies</th>\n      <th>distribution_channel</th>\n      <th>is_repeated_guest</th>\n      <th>previous_cancellations</th>\n      <th>deposit_type</th>\n      <th>days_in_waiting_list</th>\n      <th>number_of_guests</th>\n      <th>nights_stayed</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>24840</th>\n      <td>Resort Hotel</td>\n      <td>0</td>\n      <td>156</td>\n      <td>2016</td>\n      <td>5</td>\n      <td>23</td>\n      <td>30</td>\n      <td>1</td>\n      <td>5</td>\n      <td>2</td>\n      <td>0.0</td>\n      <td>0</td>\n      <td>TA/TO</td>\n      <td>0</td>\n      <td>0</td>\n      <td>2.0</td>\n      <td>0</td>\n      <td>2</td>\n      <td>6</td>\n    </tr>\n    <tr>\n      <th>6904</th>\n      <td>Resort Hotel</td>\n      <td>0</td>\n      <td>292</td>\n      <td>2016</td>\n      <td>7</td>\n      <td>29</td>\n      <td>10</td>\n      <td>1</td>\n      <td>0</td>\n      <td>2</td>\n      <td>0.0</td>\n      <td>0</td>\n      <td>TA/TO</td>\n      <td>0</td>\n      <td>0</td>\n      <td>2.0</td>\n      <td>0</td>\n      <td>2</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>1873</th>\n      <td>Resort Hotel</td>\n      <td>0</td>\n      <td>61</td>\n      <td>2015</td>\n      <td>9</td>\n      <td>38</td>\n      <td>19</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>0.0</td>\n      <td>0</td>\n      <td>Direct</td>\n      <td>0</td>\n      <td>0</td>\n      <td>2.0</td>\n      <td>0</td>\n      <td>2</td>\n      <td>4</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df3.head(3)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "2     23527\n3     22991\n1     17889\n4     14782\n7      7329\n5      6586\n6      3322\n10      977\n8       976\n14      768\n9       703\n0       618\n11      324\n12      189\n13      123\n21       62\n15       57\n16       37\n28       33\n18       33\n25       27\n19       19\n17       15\n22       14\n29       14\n30       13\n20       12\n23        7\n26        6\n24        5\n35        5\n27        3\n33        3\n42        2\n56        2\n57        1\n34        1\n38        1\n43        1\n46        1\n48        1\n49        1\n60        1\nName: nights_stayed, dtype: int64"
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df3[\"nights_stayed\"].value_counts()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "outputs": [],
    "source": [],
    "metadata": {
