Add full transformation pipeline

--- a/1SA Final Project Hotel Bookings.ipynb
+++ b/1SA Final Project Hotel Bookings.ipynb
@@ -2729,11 +2729,28 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
+   "source": [
+    "full_pipeline = Pipeline([\n",
+    "    (\"ColumnExtractor\", ColumnExtractor()),\n",
+    "    (\"MinMaxScaler\", MinMaxScaler())\n",
+    "])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%"
+     "name": "#%%\n"
     }
    }
   }
