--- a/1SA Final Project Hotel Bookings.ipynb
+++ b/1SA Final Project Hotel Bookings.ipynb
@@ -2727,13 +2727,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "outputs": [],
    "source": [
     "full_pipeline = Pipeline([\n",
     "    (\"ColumnExtractor\", ColumnExtractor()),\n",
     "    (\"MinMaxScaler\", MinMaxScaler())\n",
     "])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[0.21166893, 0.        , 0.        ],\n       [0.39620081, 0.        , 0.        ],\n       [0.08276798, 0.        , 0.        ],\n       ...,\n       [0.10040706, 0.        , 0.        ],\n       [0.17639077, 0.        , 0.        ],\n       [0.02170963, 0.        , 0.        ]])"
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train = full_pipeline.fit_transform(X_train)\n",
+    "X_train"
    ],
    "metadata": {
     "collapsed": false,
