Add histograms for numerical attributes

--- a/ML Hotel Bookings.ipynb
+++ b/ML Hotel Bookings.ipynb
@@ -423,6 +423,38 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
+   "source": [
+    "# a histogram plot for each numerical attribute\n",
+    "df.hist(bins=50, figsize=(20,15))\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "> Initial observations from the histograms:\n",
+    ">> 1. Some weeks have more bookings. This could be because of holiday or summer seasons, when people tend to travel more.\n",
+    ">> 2. According to the lead_time plot most bookings were made shortly before arrival.\n",
+    ">> 3. Booking tend to be without children or babies.\n",
+    ">> 4. It seems that the most accommodations are two weeks long or shorter.\n",
+    ">> 5. While most bookings were not canceled, there are thousands of instances that were."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
