Add features explanation markdown

--- a/1SA ML Hotel Bookings.ipynb
+++ b/1SA ML Hotel Bookings.ipynb
@@ -195,6 +195,52 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "> ### Features in the DataFrame:\n",
+    ">> 1. hotel: Resort Hotel or City Hotel\n",
+    ">> 2. is_canceled: Value indicating if the booking was canceled (1) or not (0)\n",
+    ">> 3. lead_time: Number of days between the booking date to the arrival date\n",
+    ">> 4. arrival_date_year: Year of arrival date\n",
+    ">> 5. arrival_date_month: Month of arrival date\n",
+    ">> 6. arrival_date_week_number: Week number according to year of arrival\n",
+    ">> 7. arrival_date_day_of_month: Day of arrival date\n",
+    ">> 8. stays_in_weekend_nights: Number of weekend nights booked (Saturday or Sunday)\n",
+    ">> 9. stays_in_week_nights: Number of week nights booked (Monday to Friday)\n",
+    ">> 10. adults: Number of adults\n",
+    ">> 11. children: Number of children\n",
+    ">> 12. babies: Number of babies\n",
+    ">> 13. meal: Type of meal\n",
+    ">> 14. country: Country of origin\n",
+    ">> 15. market_segment: Market segment designation, typically influences the price sensitivity\n",
+    ">> 16. distribution_channel: Booking distribution channel, refers to how the booking was made\n",
+    ">> 17. is_repeated_guest: Value indication if booking name was from a repeated guest (1) or not (0)\n",
+    ">> 18. previous_cancellations: Number of previous cancellations prior to current booking\n",
+    ">> 19. previous_bookings_not_canceled: Number of previous booking not canceled prior to current booking\n",
+    ">> 20. reserved_room_type: Code of room type reserved\n",
+    ">> 21. assigned_room_type: Code for the type of room assigned to the booking\n",
+    ">> 22. booking_changes: Number of changes made to the booking since entering the hotel management system\n",
+    ">> 23. deposit_type: Type of deposit made for the reservation\n",
+    ">> 24. agent: ID of the travel agency that made the booking\n",
+    ">> 25. company: ID of the company/organization that made the booking or is responsible for payment\n",
+    ">> 26. days_in_waiting_list: Number of days booking was in the waiting list until it was confirmed\n",
+    ">> 27. customer_type: Type of booking\n",
+    ">> 28. adr: Average Daily Rate (the sum of transactions divided by the number of nights stayed)\n",
+    ">> 29. required_car_parking_spaces: Number of car parking spaces requested\n",
+    ">> 30. total_of_special_requests: Number of special requests made by the customer\n",
+    ">> 31. reservation_status: Last reservation status (Canceled, Check-Out, No-Show)\n",
+    ">> 32. reservation_status_date: Date at which the last status was set\n",
+    ">>\n",
+    ">>> ##### *Understanding the features could help gain insight on how to treat null values.*"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
