--- a/1SA ML Hotel Bookings.ipynb
+++ b/1SA ML Hotel Bookings.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -16,6 +16,7 @@
     "%matplotlib inline\n",
     "\n",
     "# machine learning imports\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# display setup\n",
     "pd.set_option(\"display.max_columns\", None) # the None parameter displays unlimited columns\n",
@@ -278,6 +279,80 @@
    ],
    "metadata": {
     "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "> # Objective:\n",
+    "> ## Predicting if a booking will be canceled.\n",
+    ">> ### Chosen Feature:\n",
+    ">> #### *is_canceled* column\n",
+    ">>> 0 means the booking was not canceled\n",
+    ">>>\n",
+    ">>> 1 means the booking was canceled\n",
+    ">> ### Motive:\n",
+    ">> Like any business, hotels are also looking to gain profit. A model that predicts if the booking\n",
+    ">> is likely to be canceled could be a good indication for hotels, as they\n",
+    ">> may prefer to accept the lower risk bookings first."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "> ### Splitting the Data:\n",
+    ">> Before further analysis let's split the data into a training set and a testing set.\n",
+    ">> This will ensure avoidance of bias that could occur from learning the data as a whole."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "outputs": [],
+   "source": [
+    "# using sklearn train_test_split function to split the data\n",
+    "# the reason for selecting 0.15 as the test size is because the dataset is very large\n",
+    "# the random state parameter ensures that data will be shuffled and split the same way in each run\n",
+    "train_set, test_set = train_test_split(df, test_size=0.15, random_state=42)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of instances in training set:  101481\n",
+      "Number of instances in testing set:  17909\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Number of instances in training set: \", len(train_set))\n",
+    "print(\"Number of instances in testing set: \", len(test_set))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
    }
   },
   {
