Replace missing features

--- a/1SA ML Hotel Bookings.ipynb
+++ b/1SA ML Hotel Bookings.ipynb
@@ -2,10 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "# common imports\n",
@@ -15,18 +12,27 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "\n",
+    "# pandas imports\n",
+    "from pandas.plotting import scatter_matrix\n",
+    "\n",
     "# machine learning imports\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# display setup\n",
     "pd.set_option(\"display.max_columns\", None) # the None parameter displays unlimited columns\n",
     "sns.set(style=\"whitegrid\") # for plots"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "markdown",
    "source": [
-    "> ## 1. Getting the Data"
+    "## 1. Getting the Data"
    ],
    "metadata": {
     "collapsed": false
@@ -235,10 +241,7 @@
     ">>> ##### *Understanding the features could help gain insight on how to treat null values.*"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -297,9 +300,91 @@
     ">> may prefer to accept the lower risk bookings first."
    ],
    "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "> ### Missing Features:"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "children         4\ncountry        488\nagent        16340\ncompany     112593\ndtype: int64"
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# the methods below calculate the number of missing values\n",
+    "missing_values = df.isna().sum()\n",
+    "missing_values = missing_values[missing_values != 0]\n",
+    "missing_values"
+   ],
+   "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%% md\n"
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "outputs": [],
+   "source": [
+    "# replace missing values\n",
+    "\n",
+    "# can assume that there were no children\n",
+    "df.fillna({\"children\": 0}, inplace=True)\n",
+    "\n",
+    "# missing countries can be labeled unknown\n",
+    "df.fillna({\"country\": \"Unknown\"}, inplace=True)\n",
+    "\n",
+    "# missing agent ID can be zero, likely booked privately\n",
+    "df.fillna({\"agent\": 0}, inplace=True)\n",
+    "\n",
+    "# missing company ID can be zero, likely personal booking\n",
+    "df.fillna({\"company\": 0}, inplace=True)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "hotel                             0\nis_canceled                       0\nlead_time                         0\narrival_date_year                 0\narrival_date_month                0\narrival_date_week_number          0\narrival_date_day_of_month         0\nstays_in_weekend_nights           0\nstays_in_week_nights              0\nadults                            0\nchildren                          0\nbabies                            0\nmeal                              0\ncountry                           0\nmarket_segment                    0\ndistribution_channel              0\nis_repeated_guest                 0\nprevious_cancellations            0\nprevious_bookings_not_canceled    0\nreserved_room_type                0\nassigned_room_type                0\nbooking_changes                   0\ndeposit_type                      0\nagent                             0\ncompany                           0\ndays_in_waiting_list              0\ncustomer_type                     0\nadr                               0\nrequired_car_parking_spaces       0\ntotal_of_special_requests         0\nreservation_status                0\nreservation_status_date           0\ndtype: int64"
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check that the values were filled\n",
+    "df.isna().sum()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
    }
   },
@@ -316,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "# using sklearn train_test_split function to split the data\n",
@@ -333,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
@@ -359,9 +444,7 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [
-    "\n"
-   ],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
