--- a/1SA ML Hotel Bookings.ipynb
+++ b/1SA ML Hotel Bookings.ipynb
@@ -470,14 +470,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "outputs": [
     {
      "data": {
       "text/plain": "              hotel  is_canceled  lead_time  arrival_date_year  \\\n24840  Resort Hotel            0        156               2016   \n6904   Resort Hotel            0        292               2016   \n\n      arrival_date_month  arrival_date_week_number  arrival_date_day_of_month  \\\n24840                May                        23                         30   \n6904                July                        29                         10   \n\n       stays_in_weekend_nights  stays_in_week_nights  adults  children  \\\n24840                        1                     5       2       0.0   \n6904                         1                     0       2       0.0   \n\n       babies meal country market_segment distribution_channel  \\\n24840       0   BB     GBR      Online TA                TA/TO   \n6904        0   BB     ISR      Online TA                TA/TO   \n\n       is_repeated_guest  previous_cancellations  \\\n24840                  0                       0   \n6904                   0                       0   \n\n       previous_bookings_not_canceled reserved_room_type assigned_room_type  \\\n24840                               0                  A                  A   \n6904                                0                  A                  A   \n\n       booking_changes deposit_type  agent  company  days_in_waiting_list  \\\n24840                0   No Deposit  241.0      0.0                     0   \n6904                 0   No Deposit  240.0      0.0                     0   \n\n      customer_type    adr  required_car_parking_spaces  \\\n24840     Transient  52.36                            0   \n6904      Transient  72.90                            1   \n\n       total_of_special_requests reservation_status reservation_status_date  \n24840                          1          Check-Out              2016-06-05  \n6904                           2          Check-Out              2016-07-11  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>hotel</th>\n      <th>is_canceled</th>\n      <th>lead_time</th>\n      <th>arrival_date_year</th>\n      <th>arrival_date_month</th>\n      <th>arrival_date_week_number</th>\n      <th>arrival_date_day_of_month</th>\n      <th>stays_in_weekend_nights</th>\n      <th>stays_in_week_nights</th>\n      <th>adults</th>\n      <th>children</th>\n      <th>babies</th>\n      <th>meal</th>\n      <th>country</th>\n      <th>market_segment</th>\n      <th>distribution_channel</th>\n      <th>is_repeated_guest</th>\n      <th>previous_cancellations</th>\n      <th>previous_bookings_not_canceled</th>\n      <th>reserved_room_type</th>\n      <th>assigned_room_type</th>\n      <th>booking_changes</th>\n      <th>deposit_type</th>\n      <th>agent</th>\n      <th>company</th>\n      <th>days_in_waiting_list</th>\n      <th>customer_type</th>\n      <th>adr</th>\n      <th>required_car_parking_spaces</th>\n      <th>total_of_special_requests</th>\n      <th>reservation_status</th>\n      <th>reservation_status_date</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>24840</th>\n      <td>Resort Hotel</td>\n      <td>0</td>\n      <td>156</td>\n      <td>2016</td>\n      <td>May</td>\n      <td>23</td>\n      <td>30</td>\n      <td>1</td>\n      <td>5</td>\n      <td>2</td>\n      <td>0.0</td>\n      <td>0</td>\n      <td>BB</td>\n      <td>GBR</td>\n      <td>Online TA</td>\n      <td>TA/TO</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>A</td>\n      <td>A</td>\n      <td>0</td>\n      <td>No Deposit</td>\n      <td>241.0</td>\n      <td>0.0</td>\n      <td>0</td>\n      <td>Transient</td>\n      <td>52.36</td>\n      <td>0</td>\n      <td>1</td>\n      <td>Check-Out</td>\n      <td>2016-06-05</td>\n    </tr>\n    <tr>\n      <th>6904</th>\n      <td>Resort Hotel</td>\n      <td>0</td>\n      <td>292</td>\n      <td>2016</td>\n      <td>July</td>\n      <td>29</td>\n      <td>10</td>\n      <td>1</td>\n      <td>0</td>\n      <td>2</td>\n      <td>0.0</td>\n      <td>0</td>\n      <td>BB</td>\n      <td>ISR</td>\n      <td>Online TA</td>\n      <td>TA/TO</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>A</td>\n      <td>A</td>\n      <td>0</td>\n      <td>No Deposit</td>\n      <td>240.0</td>\n      <td>0.0</td>\n      <td>0</td>\n      <td>Transient</td>\n      <td>72.90</td>\n      <td>1</td>\n      <td>2</td>\n      <td>Check-Out</td>\n      <td>2016-07-11</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,10 +493,63 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "> ### Numerical Attributes:"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [],
+   "source": [
+    "# using method to create correlations matrix\n",
+    "corr_matrix = df2.corr()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "is_canceled                       1.000000\nlead_time                         0.292182\nprevious_cancellations            0.109883\nadults                            0.059744\ndays_in_waiting_list              0.053068\nadr                               0.046790\nstays_in_week_nights              0.027764\narrival_date_year                 0.017365\narrival_date_week_number          0.007757\nchildren                          0.006771\nstays_in_weekend_nights          -0.000019\narrival_date_day_of_month        -0.006062\nbabies                           -0.034658\nagent                            -0.046444\nprevious_bookings_not_canceled   -0.055847\ncompany                          -0.082484\nis_repeated_guest                -0.084179\nbooking_changes                  -0.142916\nrequired_car_parking_spaces      -0.195675\ntotal_of_special_requests        -0.233580\nName: is_canceled, dtype: float64"
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# looking at attributes correlation with is_canceled feature\n",
+    "corr_matrix[\"is_canceled\"].sort_values(ascending=False)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "\n"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
