Add corr matrix with attribute combinations

--- a/1SA ML Hotel Bookings.ipynb
+++ b/1SA ML Hotel Bookings.ipynb
@@ -545,11 +545,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "outputs": [],
    "source": [
-    "\n"
+    "# experimenting with attribute combinations\n",
+    "\n",
+    "# adding column with total amount of guests that stayed\n",
+    "df2[\"guests_stayed\"] = df2[\"adults\"] + df2[\"children\"] + df2[\"babies\"]\n",
+    "\n",
+    "# adding column with total nights stayed\n",
+    "df2[\"nights_stayed\"] = df2[\"stays_in_week_nights\"] + df2[\"stays_in_weekend_nights\"]"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "is_canceled                       1.000000\nlead_time                         0.292182\nprevious_cancellations            0.109883\nadults                            0.059744\ndays_in_waiting_list              0.053068\nadr                               0.046790\nguests_stayed                     0.046693\nstays_in_week_nights              0.027764\nnights_stayed                     0.020709\narrival_date_year                 0.017365\narrival_date_week_number          0.007757\nchildren                          0.006771\nstays_in_weekend_nights          -0.000019\narrival_date_day_of_month        -0.006062\nbabies                           -0.034658\nagent                            -0.046444\nprevious_bookings_not_canceled   -0.055847\ncompany                          -0.082484\nis_repeated_guest                -0.084179\nbooking_changes                  -0.142916\nrequired_car_parking_spaces      -0.195675\ntotal_of_special_requests        -0.233580\nName: is_canceled, dtype: float64"
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# looking at the correlation matrix again with the added columns\n",
+    "corr_matrix = df2.corr()\n",
+    "corr_matrix[\"is_canceled\"].sort_values(ascending=False)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
