Add correlations overview markdown

--- a/1SA ML Hotel Bookings.ipynb
+++ b/1SA ML Hotel Bookings.ipynb
@@ -589,16 +589,38 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "> ### Correlations with is_canceled Attribute - Overview:\n",
+    "> The strongest positive correlations (0.1 or more) are:\n",
+    "> * lead_time\n",
+    "> * previous_cancellations\n",
+    ">\n",
+    "> The strongest negative correlations (-0.1 or less) are:\n",
+    "> * total_of_special_requests\n",
+    "> * required_car_parking_spaces\n",
+    "> * booking_changes\n",
+    ">\n",
+    "> The attribute combinations tested (guests stayed and nights stayed) both had weak correlations."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "execution_count": null,
+   "outputs": []
   }
  ],
  "metadata": {
