Divide lead time to groups according to number of days

--- a/1SA ML Hotel Bookings.ipynb
+++ b/1SA ML Hotel Bookings.ipynb
@@ -657,9 +657,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "outputs": [],
-   "source": [],
+   "source": [
+    "# dividing lead time by less than 100 days, 100-355 days and 365 or more days\n",
+    "lead_time_1 = df2[df2[\"lead_time\"] < 100]\n",
+    "lead_time_2 = df2[(df2[\"lead_time\"] >= 100) & (df2[\"lead_time\"] < 365)]\n",
+    "lead_time_3 = df2[df2[\"lead_time\"] >= 365]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "outputs": [],
+   "source": [
+    "# calculating cancellations according to lead time groups\n",
+    "lead_cancel_1 = lead_time_1[\"is_canceled\"].value_counts()\n",
+    "lead_cancel_2 = lead_time_2[\"is_canceled\"].value_counts()\n",
+    "lead_cancel_3 = lead_time_3[\"is_canceled\"].value_counts()\n"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
