Add DataFrame with count of cancellations for each lead time group

--- a/1SA ML Hotel Bookings.ipynb
+++ b/1SA ML Hotel Bookings.ipynb
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "outputs": [
     {
      "data": {
@@ -713,6 +713,33 @@
     "bx[2].set_title(\"lead_time [365,max) days\", size=20)\n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "                    0      1\n[0,100) days    44163  16828\n[100,365) days  19013  18746\n[365,max) days    873   1858",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>0</th>\n      <th>1</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>[0,100) days</th>\n      <td>44163</td>\n      <td>16828</td>\n    </tr>\n    <tr>\n      <th>[100,365) days</th>\n      <td>19013</td>\n      <td>18746</td>\n    </tr>\n    <tr>\n      <th>[365,max) days</th>\n      <td>873</td>\n      <td>1858</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# total count of lead time according to cancellation\n",
+    "total_lead_days_cancel = pd.DataFrame(data=[lead_cancel_1,lead_cancel_2,lead_cancel_3],\n",
+    "             index=[\"[0,100) days\", \"[100,365) days\", \"[365,max) days\"])\n",
+    "total_lead_days_cancel"
    ],
    "metadata": {
     "collapsed": false,
