Add lead time observations markdown

--- a/1SA ML Hotel Bookings.ipynb
+++ b/1SA ML Hotel Bookings.ipynb
@@ -783,6 +783,18 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "> #### Observations:\n",
+    ">> * Most bookings occur about 5 days prior to arrival.\n",
+    ">> * When the lead time is larger the chances for cancellation increase.\n",
+    ">> * The amount of bookings is steady overall between 20-100 days, then drops."
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
