--- a/1SA ML Hotel Bookings.ipynb
+++ b/1SA ML Hotel Bookings.ipynb
@@ -404,7 +404,7 @@
    "execution_count": 11,
    "outputs": [],
    "source": [
-    "# using sklearn train_test_split function to split the data\n",
+    "# use sklearn train_test_split function to split the data\n",
     "# the reason for selecting 0.15 as the test size is because the dataset is very large\n",
     "# the random state parameter ensures that data will be shuffled and split the same way in each run\n",
     "train_set, test_set = train_test_split(df, test_size=0.15, random_state=42)"
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "# deep copy of the training set\n",
@@ -470,14 +470,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "outputs": [
     {
      "data": {
       "text/plain": "              hotel  is_canceled  lead_time  arrival_date_year  \\\n24840  Resort Hotel            0        156               2016   \n6904   Resort Hotel            0        292               2016   \n\n      arrival_date_month  arrival_date_week_number  arrival_date_day_of_month  \\\n24840                May                        23                         30   \n6904                July                        29                         10   \n\n       stays_in_weekend_nights  stays_in_week_nights  adults  children  \\\n24840                        1                     5       2       0.0   \n6904                         1                     0       2       0.0   \n\n       babies meal country market_segment distribution_channel  \\\n24840       0   BB     GBR      Online TA                TA/TO   \n6904        0   BB     ISR      Online TA                TA/TO   \n\n       is_repeated_guest  previous_cancellations  \\\n24840                  0                       0   \n6904                   0                       0   \n\n       previous_bookings_not_canceled reserved_room_type assigned_room_type  \\\n24840                               0                  A                  A   \n6904                                0                  A                  A   \n\n       booking_changes deposit_type  agent  company  days_in_waiting_list  \\\n24840                0   No Deposit  241.0      0.0                     0   \n6904                 0   No Deposit  240.0      0.0                     0   \n\n      customer_type    adr  required_car_parking_spaces  \\\n24840     Transient  52.36                            0   \n6904      Transient  72.90                            1   \n\n       total_of_special_requests reservation_status reservation_status_date  \n24840                          1          Check-Out              2016-06-05  \n6904                           2          Check-Out              2016-07-11  ",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>hotel</th>\n      <th>is_canceled</th>\n      <th>lead_time</th>\n      <th>arrival_date_year</th>\n      <th>arrival_date_month</th>\n      <th>arrival_date_week_number</th>\n      <th>arrival_date_day_of_month</th>\n      <th>stays_in_weekend_nights</th>\n      <th>stays_in_week_nights</th>\n      <th>adults</th>\n      <th>children</th>\n      <th>babies</th>\n      <th>meal</th>\n      <th>country</th>\n      <th>market_segment</th>\n      <th>distribution_channel</th>\n      <th>is_repeated_guest</th>\n      <th>previous_cancellations</th>\n      <th>previous_bookings_not_canceled</th>\n      <th>reserved_room_type</th>\n      <th>assigned_room_type</th>\n      <th>booking_changes</th>\n      <th>deposit_type</th>\n      <th>agent</th>\n      <th>company</th>\n      <th>days_in_waiting_list</th>\n      <th>customer_type</th>\n      <th>adr</th>\n      <th>required_car_parking_spaces</th>\n      <th>total_of_special_requests</th>\n      <th>reservation_status</th>\n      <th>reservation_status_date</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>24840</th>\n      <td>Resort Hotel</td>\n      <td>0</td>\n      <td>156</td>\n      <td>2016</td>\n      <td>May</td>\n      <td>23</td>\n      <td>30</td>\n      <td>1</td>\n      <td>5</td>\n      <td>2</td>\n      <td>0.0</td>\n      <td>0</td>\n      <td>BB</td>\n      <td>GBR</td>\n      <td>Online TA</td>\n      <td>TA/TO</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>A</td>\n      <td>A</td>\n      <td>0</td>\n      <td>No Deposit</td>\n      <td>241.0</td>\n      <td>0.0</td>\n      <td>0</td>\n      <td>Transient</td>\n      <td>52.36</td>\n      <td>0</td>\n      <td>1</td>\n      <td>Check-Out</td>\n      <td>2016-06-05</td>\n    </tr>\n    <tr>\n      <th>6904</th>\n      <td>Resort Hotel</td>\n      <td>0</td>\n      <td>292</td>\n      <td>2016</td>\n      <td>July</td>\n      <td>29</td>\n      <td>10</td>\n      <td>1</td>\n      <td>0</td>\n      <td>2</td>\n      <td>0.0</td>\n      <td>0</td>\n      <td>BB</td>\n      <td>ISR</td>\n      <td>Online TA</td>\n      <td>TA/TO</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>A</td>\n      <td>A</td>\n      <td>0</td>\n      <td>No Deposit</td>\n      <td>240.0</td>\n      <td>0.0</td>\n      <td>0</td>\n      <td>Transient</td>\n      <td>72.90</td>\n      <td>1</td>\n      <td>2</td>\n      <td>Check-Out</td>\n      <td>2016-07-11</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,10 +506,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "outputs": [],
    "source": [
-    "# using method to create correlations matrix\n",
+    "# method creates a correlations matrix\n",
     "corr_matrix = df2.corr()"
    ],
    "metadata": {
@@ -521,13 +521,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "outputs": [
     {
      "data": {
       "text/plain": "is_canceled                       1.000000\nlead_time                         0.292182\nprevious_cancellations            0.109883\nadults                            0.059744\ndays_in_waiting_list              0.053068\nadr                               0.046790\nstays_in_week_nights              0.027764\narrival_date_year                 0.017365\narrival_date_week_number          0.007757\nchildren                          0.006771\nstays_in_weekend_nights          -0.000019\narrival_date_day_of_month        -0.006062\nbabies                           -0.034658\nagent                            -0.046444\nprevious_bookings_not_canceled   -0.055847\ncompany                          -0.082484\nis_repeated_guest                -0.084179\nbooking_changes                  -0.142916\nrequired_car_parking_spaces      -0.195675\ntotal_of_special_requests        -0.233580\nName: is_canceled, dtype: float64"
      },
-     "execution_count": 18,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,15 +545,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "outputs": [],
    "source": [
     "# experimenting with attribute combinations\n",
     "\n",
-    "# adding column with total amount of guests that stayed\n",
+    "# adds column with total amount of guests that stayed\n",
     "df2[\"guests_stayed\"] = df2[\"adults\"] + df2[\"children\"] + df2[\"babies\"]\n",
     "\n",
-    "# adding column with total nights stayed\n",
+    "# adds column with total nights stayed\n",
     "df2[\"nights_stayed\"] = df2[\"stays_in_week_nights\"] + df2[\"stays_in_weekend_nights\"]"
    ],
    "metadata": {
@@ -565,13 +565,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "outputs": [
     {
      "data": {
       "text/plain": "is_canceled                       1.000000\nlead_time                         0.292182\nprevious_cancellations            0.109883\nadults                            0.059744\ndays_in_waiting_list              0.053068\nadr                               0.046790\nguests_stayed                     0.046693\nstays_in_week_nights              0.027764\nnights_stayed                     0.020709\narrival_date_year                 0.017365\narrival_date_week_number          0.007757\nchildren                          0.006771\nstays_in_weekend_nights          -0.000019\narrival_date_day_of_month        -0.006062\nbabies                           -0.034658\nagent                            -0.046444\nprevious_bookings_not_canceled   -0.055847\ncompany                          -0.082484\nis_repeated_guest                -0.084179\nbooking_changes                  -0.142916\nrequired_car_parking_spaces      -0.195675\ntotal_of_special_requests        -0.233580\nName: is_canceled, dtype: float64"
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "outputs": [
     {
      "data": {
@@ -657,10 +657,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "outputs": [],
    "source": [
-    "# dividing lead time by less than 100 days, 100-355 days and 365 or more days\n",
+    "# divides lead time by less than 100 days, 100-355 days and 365 or more days\n",
     "lead_time_1 = df2[df2[\"lead_time\"] < 100]\n",
     "lead_time_2 = df2[(df2[\"lead_time\"] >= 100) & (df2[\"lead_time\"] < 365)]\n",
     "lead_time_3 = df2[df2[\"lead_time\"] >= 365]"
@@ -674,10 +674,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "outputs": [],
    "source": [
-    "# calculating cancellations according to lead time groups\n",
+    "# calculates cancellations according to lead time groups\n",
     "lead_cancel_1 = lead_time_1[\"is_canceled\"].value_counts()\n",
     "lead_cancel_2 = lead_time_2[\"is_canceled\"].value_counts()\n",
     "lead_cancel_3 = lead_time_3[\"is_canceled\"].value_counts()"
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "outputs": [
     {
      "data": {
@@ -723,14 +723,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 23,
    "outputs": [
     {
      "data": {
       "text/plain": "                    0      1\n[0,100) days    44163  16828\n[100,365) days  19013  18746\n[365,max) days    873   1858",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>0</th>\n      <th>1</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>[0,100) days</th>\n      <td>44163</td>\n      <td>16828</td>\n    </tr>\n    <tr>\n      <th>[100,365) days</th>\n      <td>19013</td>\n      <td>18746</td>\n    </tr>\n    <tr>\n      <th>[365,max) days</th>\n      <td>873</td>\n      <td>1858</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 33,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -750,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 24,
    "outputs": [
     {
      "data": {
@@ -795,8 +795,153 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "> ### Cancellations According to Previous Cancellations:"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
+   "outputs": [],
+   "source": [
+    "# gets previous cancellation column\n",
+    "prev_cancel = df2[\"previous_cancellations\"]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "0     96001\n1      5112\n2       101\n3        48\n4        29\n5        15\n6        22\n11       30\n13        8\n14       11\n19       17\n21        1\n24       45\n25       20\n26       21\nName: previous_cancellations, dtype: int64"
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# sorts index values\n",
+    "prev_cancel.value_counts().sort_index()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cancellation Rates:\n",
+      "\n",
+      "Never canceled = 33.76 %\n",
+      "Canceled once = 94.37 %\n",
+      "Canceled more than 10 times: 85.62 %\n",
+      "Canceled more than 11 times: 99.19 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Cancellation Rates:\\n\")\n",
+    "print('Never canceled =' ,str(round(df2[df2['previous_cancellations']==0]\n",
+    "                                            ['is_canceled'].mean()*100,2))+' %')\n",
+    "print('Canceled once =' ,str(round(df2[df2['previous_cancellations']==1]\n",
+    "                                            ['is_canceled'].mean()*100,2))+' %')\n",
+    "print('Canceled more than 10 times:',str(round(df2[df2['previous_cancellations']>10]\n",
+    "                                            ['is_canceled'].mean()*100,2))+' %')\n",
+    "print('Canceled more than 11 times:' ,str(round(df2[df2['previous_cancellations']>11]\n",
+    "                                            ['is_canceled'].mean()*100,2))+' %')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "[33.76,\n 94.37,\n 33.66,\n 29.17,\n 24.14,\n 13.33,\n 31.82,\n 30.0,\n 87.5,\n 100.0,\n 100.0,\n 100.0,\n 100.0,\n 100.0,\n 100.0]"
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# creates a list with previous cancellations indices\n",
+    "prev_cancel_index = df2[\"previous_cancellations\"].value_counts().index.to_list()\n",
+    "# sorts the list\n",
+    "prev_cancel_index.sort()\n",
+    "\n",
+    "# calculates the average percentage of cancellations for each value in DataFrame\n",
+    "percentage_prev_cancel= []\n",
+    "for i in prev_cancel_index:\n",
+    "    percentage_prev_cancel.append((round(df2[df2[\"previous_cancellations\"]==i]\n",
+    "                                        [\"is_canceled\"].mean()*100,2)))\n",
+    "percentage_prev_cancel"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "    Previous Cancellations %\n0                      33.76\n1                      94.37\n2                      33.66\n3                      29.17\n4                      24.14\n5                      13.33\n6                      31.82\n11                     30.00\n13                     87.50\n14                    100.00\n19                    100.00\n21                    100.00\n24                    100.00\n25                    100.00\n26                    100.00",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Previous Cancellations %</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>33.76</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>94.37</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>33.66</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>29.17</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>24.14</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>13.33</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>31.82</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>30.00</td>\n    </tr>\n    <tr>\n      <th>13</th>\n      <td>87.50</td>\n    </tr>\n    <tr>\n      <th>14</th>\n      <td>100.00</td>\n    </tr>\n    <tr>\n      <th>19</th>\n      <td>100.00</td>\n    </tr>\n    <tr>\n      <th>21</th>\n      <td>100.00</td>\n    </tr>\n    <tr>\n      <th>24</th>\n      <td>100.00</td>\n    </tr>\n    <tr>\n      <th>25</th>\n      <td>100.00</td>\n    </tr>\n    <tr>\n      <th>26</th>\n      <td>100.00</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# creates a DataFrame with the results\n",
+    "df_prev_cancel = pd.DataFrame(percentage_prev_cancel, index=prev_cancel_index, columns=[\"Previous Cancellations %\"])\n",
+    "df_prev_cancel"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "outputs": [],
    "source": [],
    "metadata": {
