Add previous cancellations observations markdown

--- a/1SA ML Hotel Bookings.ipynb
+++ b/1SA ML Hotel Bookings.ipynb
@@ -969,10 +969,27 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "> ### Observations:\n",
+    ">> The percentages show that when there are more previous cancellations, there is\n",
+    ">> a substantially higher chance the customer will cancel again."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "\n",
+    "\n"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
