Add special requests observations markdown

--- a/1SA ML Hotel Bookings.ipynb
+++ b/1SA ML Hotel Bookings.ipynb
@@ -1171,7 +1171,7 @@
     }
    ],
    "source": [
-    "# a plot of the number of instances for each hotel\n",
+    "# plots special requests according to cancellations\n",
     "plt.figure(figsize=(10,5))\n",
     "sns.countplot(x=df2[\"total_of_special_requests\"], hue=df2[\"is_canceled\"])\n",
     "plt.title(\"Special Requests\", size=20)\n",
@@ -1184,6 +1184,20 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "> ### Observations:\n",
+    ">> * Nearly half of the bookings without special requests are canceled.\n",
+    ">> * There are fewer cancellations when the number of special requests increases."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
     }
    }
   },
