Add parking spaces observations markdown

--- a/1SA ML Hotel Bookings.ipynb
+++ b/1SA ML Hotel Bookings.ipynb
@@ -1329,6 +1329,23 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "> ### Observations:\n",
+    ">> * Dividing the instances into groups according to cancellations shows that all canceled\n",
+    ">> bookings were ones without required parking spaces.\n",
+    ">> * This could potentially be a bad indication for cancellations. The model could learn\n",
+    ">> that a booking can be canceled **only** if no parking spaces were required, which does not\n",
+    ">> necessarily have to be the case."
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
